# kagimcp

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  smithery.yaml
src/kagi/: server.py
src/kagimcp/: __init__.py  server.py
tests/: test_server.py
