[project]
name = "kagimcp"
version = "0.1.1"
authors = [
    {name="Rehan Ali Rana", email="rehan@kagi.com"},
]
description = "Kagi MPC server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "kagiapi>=0.2.1",
    "mcp>=1.1.2",
    "pydantic>=2.10.3",
]

[project.urls]
Homepage = "https://github.com/kagisearch/kagi-mcp"
Issues = "https://github.com/kagisearch/kagi-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
kagimcp = "kagimcp:main"
