[project]
name = "kagimcp"
version = "0.2.0"
authors = [
    {name="Rehan Ali Rana", email="rehan@kagi.com"},
]
description = "Kagi MPC server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "kagiapi==0.2.0",  # 0.2.1 breaks cache parameter because https://github.com/kagisearch/kagiapi/pull/5 is literally backwards
    "mcp[cli]~=1.2.0",
    "pydantic>=2.10.3",
]

[project.urls]
Homepage = "https://github.com/kagisearch/kagi-mcp"
Issues = "https://github.com/kagisearch/kagi-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
kagimcp = "kagimcp:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
